--- a/ios/imaginarium/Info.plist
+++ b/ios/imaginarium/Info.plist
@@ -62,5 +62,35 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+    	<array>
+    		<string>AntDesign.ttf</string>
+    		<string>Entypo.ttf</string>
+    		<string>EvilIcons.ttf</string>
+    		<string>Feather.ttf</string>
+    		<string>FontAwesome.ttf</string>
+    		<string>FontAwesome5_Brands.ttf</string>
+    		<string>FontAwesome5_Regular.ttf</string>
+    		<string>FontAwesome5_Solid.ttf</string>
+    		<string>Foundation.ttf</string>
+    		<string>Ionicons.ttf</string>
+    		<string>MaterialIcons.ttf</string>
+    		<string>MaterialCommunityIcons.ttf</string>
+    		<string>SimpleLineIcons.ttf</string>
+    		<string>Octicons.ttf</string>
+    		<string>Zocial.ttf</string>
+    		<string>Fontisto.ttf</string>
+    		<string>CormorantUnicase-Bold.ttf</string>
+    		<string>CormorantUnicase-Light.ttf</string>
+    		<string>CormorantUnicase-Medium.ttf</string>
+    		<string>CormorantUnicase-Regular.ttf</string>
+    		<string>CormorantUnicase-SemiBold.ttf</string>
+    		<string>PlayfairDisplaySC-Black.ttf</string>
+    		<string>PlayfairDisplaySC-BlackItalic.ttf</string>
+    		<string>PlayfairDisplaySC-Bold.ttf</string>
+    		<string>PlayfairDisplaySC-BoldItalic.ttf</string>
+    		<string>PlayfairDisplaySC-Italic.ttf</string>
+    		<string>PlayfairDisplaySC-Regular.ttf</string>
+    	</array>
 </dict>
 </plist>
