--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@react-native-firebase/remote-config": "^10.4.0",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "i18next": "^19.8.4",
     "lottie-react-native": "^3.5.0",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
+    "react-i18next": "^11.8.5",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
