--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "postinstall": "(cd ios && pod install)"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.1.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.4.0",
