--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.13.1",
     "react-i18next": "^11.8.5",
     "react-native": "0.63.4",
+    "react-native-config": "^1.4.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
