--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shade-blend-color": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
