--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^11.8.5",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.1",
+    "react-native-device-info": "^8.0.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
